Trying to fix animation glitch on iPhone

--- a/src/style.css
+++ b/src/style.css
@@ -16,8 +16,6 @@ body {
 }
 
 #w {
-  left: 50%;
-  top: 50%;
   position: absolute;
   width: 100px;
   transform: translate(-50%, -50%);
